Added a new AddEvent class, based on the edit event class.